# 20SPS21

./: 20СПС21.doc
4-EnumChild/: 4-EnumChild.vcxproj  main.cpp
4-EnumChild/Debug/: 4-EnumChild_manifest.rc  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
4-Practic/: 4-Practic.vcxproj  main.cpp
4-Practic/Debug/: 4-Practic.lastbuildstate  4-Practic_manifest.rc  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
Hello world/: Hello world.sln  Hello world.vcxproj  Hello world.vcxproj.filters  Hello_world.cpp
Hello world/Debug/: CL.read.1.tlog  CL.write.1.tlog  Hello world.ilk  Hello world.lastbuildstate  Hello1.ilk  (+13 more)
Hello1/: Hello1.cpp  Hello1.vcxproj  Hello1.vcxproj.filters
Kontakts/: Kontakts.pro  addperson.cpp  main.cpp  showperson.cpp
Lessons/: CMakeLists.txt  main.cpp  задачи 2.txt
array/: CMakeLists.txt  main.cpp  my_array.h
hq-for-jule/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
hq-for-jule/.anjuta/session/: anjuta.session  dock-layout.xml
hq-for-jule/Debug/: Makefile  config.h  config.status  libtool
hq-for-jule/Debug/po/: Makefile  Makefile.in  POTFILES
hq-for-jule/Debug/src/: Makefile  hq_for_jule
hq-for-jule/Debug/src/.deps/: main.Po
hq-for-jule/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
hq-for-jule/src/: Makefile.am  Makefile.in  main.c  main.c~
hq_for_jule/: .anjuta_sym_db.db  CMakeLists.txt  Makefile.in  aclocal.m4  configure  configure.ac  main.cpp
hq_for_jule/src/: Makefile.am  Makefile.in  main.cc  main.cc~
kontakts/: CMakeLists.txt  contacs.h  main.cpp
rabbit/: .anjuta_sym_db.db  Makefile.am  Makefile.in  configure  configure.ac
rabbit/.anjuta/session/: anjuta.session  dock-layout.xml
rabbit/Debug/: Makefile  config.h  config.status  libtool
rabbit/Debug/po/: Makefile  Makefile.in  POTFILES
rabbit/Debug/src/: Makefile  rabbit
rabbit/Debug/src/.deps/: main.Po
rabbit/autom4te.cache/: output.0  output.1  requests  traces.1
rabbit/src/: Makefile.am  Makefile.in  main.cc  main.cc~
(+54 files in other folders)
